--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "doctrine/dbal": "^4.2",
-        "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "guzzlehttp/guzzle": "^7.2",
+        "laravel/framework": "^11.0",
+        "laravel/sanctum": "^4.0",
+        "laravel/tinker": "^2.8",
+        "stripe/stripe-php": "^16.2",
+        "laravel/cashier": "^15.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
